--- a/leasson04.ipynb
+++ b/leasson04.ipynb
@@ -78,24 +78,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "您的BMI值是21.1\n",
-      "您的體重\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from decimal import Decimal, ROUND_HALF_UP\n",
+    "\n",
     "# https://depart.femh.org.tw/dietary/3OPD/BMI.htm\n",
     "def getBMI(height, weight):\n",
     "\n",
     "    try:\n",
-    "\n",
     "        # 公分轉公尺\n",
     "        _height = height * Decimal(0.01) \n",
     "\n",
