--- a/leasson04.ipynb
+++ b/leasson04.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "不可以考駕照\n",
-      "2024-09-07 15:31:21\n"
+      "2024-09-14 08:50:20\n"
      ]
     }
    ],
@@ -78,9 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的BMI值是24.4\n",
+      "您的體重過重\n"
+     ]
+    }
+   ],
    "source": [
     "from decimal import Decimal, ROUND_HALF_UP\n",
     "\n",
