--- a/leasson05.ipynb
+++ b/leasson05.ipynb
@@ -45,18 +45,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "身高和體重必須大於0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 57\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[38;5;66;03m# 檢查身高和體重是否大於0\u001b[39;00m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m height \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m weight \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 57\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m身高和體重必須大於0\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     59\u001b[0m \u001b[38;5;66;03m# 計算BMI\u001b[39;00m\n\u001b[0;32m     60\u001b[0m bmi \u001b[38;5;241m=\u001b[39m calculate_bmi(height, weight)\n",
-      "\u001b[1;31mValueError\u001b[0m: 身高和體重必須大於0"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的身高 166.0 公分，體重 11.0 公斤\n",
+      "您的BMI值是: 3.99, 您的體重正常\n",
+      "感謝使用BMI計算程式！\n"
      ]
     }
    ],
@@ -135,6 +133,57 @@
     "\n",
     "print(\"感謝使用BMI計算程式！\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入有效的數字。\n",
+      "請輸入有效的數字。\n",
+      "您的身高 3.0 公分，體重 55.0 公斤\n",
+      "您的BMI值是: 61111.11, 您的體重重度肥胖\n",
+      "感謝使用BMI計算程式！\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_valid_input(prompt):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            value = float(input(prompt))\n",
+    "            if value <= 0:\n",
+    "                print(\"輸入必須大於0，請重新輸入。\")\n",
+    "            else:\n",
+    "                return value\n",
+    "        except ValueError:\n",
+    "            print(\"請輸入有效的數字。\")\n",
+    "\n",
+    "# 使用while迴圈讓使用者可以繼續計算BMI\n",
+    "while True:\n",
+    "    # 使用get_valid_input函數讓使用者輸入身高和體重\n",
+    "    height = get_valid_input(\"請輸入您的身高（公分）: \")\n",
+    "    weight = get_valid_input(\"請輸入您的體重（公斤）: \")\n",
+    "    \n",
+    "    # 計算BMI\n",
+    "    bmi = calculate_bmi(height, weight)\n",
+    "    status = interpret_bmi(bmi)\n",
+    "\n",
+    "    # 輸出結果\n",
+    "    print(f\"您的身高 {height} 公分，體重 {weight} 公斤\")\n",
+    "    print(f\"您的BMI值是: {bmi:.2f}, 您的體重{status}\")\n",
+    "\n",
+    "    # 詢問使用者是否要繼續計算\n",
+    "    continue_calculation = input(\"是否要繼續計算下一個BMI？(是/否): \")\n",
+    "    if continue_calculation.lower() not in ['是', 'y', 'yes']:\n",
+    "        break\n",
+    "\n",
+    "print(\"感謝使用BMI計算程式！\")\n"
    ]
   }
  ],
