--- a/leasson06.ipynb
+++ b/leasson06.ipynb
@@ -2,31 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "您的身高 166 公分，體重 80 公斤\n",
-      "您的BMI值是: 29.03, 您的體重輕度肥胖\n",
+      "您的身高 166 公分，體重 90 公斤\n",
+      "您的BMI值是: 32.66, 您的體重中度肥胖\n",
       "感謝使用BMI計算程式！\n"
      ]
     }
    ],
    "source": [
+    "def get_input():\n",
+    "    height = get_valid_input(\"請輸入您的身高（公分）: \")\n",
+    "    weight = get_valid_input(\"請輸入您的體重（公斤）: \")\n",
+    "    return height, weight\n",
+    "\n",
     "# 輸入值檢核\n",
     "def get_valid_input(prompt):\n",
     "    while True:\n",
     "        try:\n",
-    "            value = float(input(prompt))\n",
+    "            value = int(input(prompt))\n",
     "            if value <= 0:\n",
-    "                print(\"輸入必須大於0，請重新輸入。\")\n",
+    "                print(f\"輸入必須大於0，請重新輸入。\")\n",
     "            else:\n",
     "                return value\n",
     "        except ValueError:\n",
-    "            print(\"請輸入有效的數字。\")\n",
+    "            print(f\"請輸入有效的數字。\")\n",
     "\n",
     "# 計算BMI的函數\n",
     "def calculate_bmi(height_cm, weight_kg):\n",
@@ -37,32 +42,37 @@
     "    bmi = weight_kg / (height_m ** 2)\n",
     "    \n",
     "    # 將結果四捨五入到小數點後兩位\n",
-    "    return round(bmi, 2)\n",
+    "    bmi = round(bmi, 2)\n",
+    "\n",
+    "    # 根據BMI值判斷體重狀況\n",
+    "    status = interpret_bmi(bmi)\n",
+    "\n",
+    "    return bmi, status\n",
     "\n",
     "# 根據BMI值判斷體重狀況\n",
-    "def interpret_bmi(bmi):\n",
+    "def interpret_bmi(bmi:float) -> str:\n",
     "    if bmi >= 35:\n",
     "        return \"重度肥胖\"\n",
-    "    elif 30 <= bmi < 35:\n",
+    "    elif bmi >= 30:\n",
     "        return \"中度肥胖\"\n",
-    "    elif 27 <= bmi < 30:\n",
+    "    elif bmi >= 27:\n",
     "        return \"輕度肥胖\"\n",
-    "    elif 24 <= bmi < 27:\n",
+    "    elif bmi >=24:\n",
     "        return \"過重\"\n",
+    "    elif bmi < 18.5:\n",
+    "        return \"體重過輕\"\n",
     "    else:\n",
-    "        return \"正常\"\n",
+    "        return \"正常範圍\"\n",
     "\n",
     "\n",
     "# 使用while迴圈讓使用者可以繼續計算BMI\n",
     "while True:\n",
     "    # 使用input函數讓使用者輸入身高和體重\n",
-    "    height = get_valid_input(\"請輸入您的身高（公分）: \")\n",
-    "    weight = get_valid_input(\"請輸入您的體重（公斤）: \")\n",
+    "    height, weight = get_input()\n",
     "    \n",
     "    # 計算BMI\n",
-    "    bmi = calculate_bmi(height, weight)\n",
-    "    status = interpret_bmi(bmi)\n",
-    "\n",
+    "    bmi, status = calculate_bmi(height, weight)\n",
+    "    \n",
     "    # 輸出結果\n",
     "    print(f\"您的身高 {height:.0f} 公分，體重 {weight:.0f} 公斤\")\n",
     "    print(f\"您的BMI值是: {bmi}, 您的體重{status}\")\n",
@@ -72,7 +82,7 @@
     "    if continue_calculation.lower() not in ['是', 'y', 'yes']:\n",
     "        break\n",
     "\n",
-    "print(\"感謝使用BMI計算程式！\")"
+    "print(\"結束使用BMI計算程式！\")"
    ]
   }
  ],
