--- a/leasson_BMI/bmi.ipynb
+++ b/leasson_BMI/bmi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -16,14 +16,15 @@
     }
    ],
    "source": [
-    "import tools\n",
+    "import widget # package\n",
+    "# import tools # module\n",
     "\n",
     "while True:\n",
     "    # 使用input函數讓使用者輸入身高和體重\n",
-    "    height, weight = tools.get_input()\n",
+    "    height, weight = widget.get_input()\n",
     "    \n",
     "    # 計算BMI\n",
-    "    bmi, status = tools.calculate_bmi(height, weight)\n",
+    "    bmi, status = widget.calculate_bmi(height, weight)\n",
     "    \n",
     "    # 輸出結果\n",
     "    print(f\"您的身高 {height:.0f} 公分，體重 {weight:.0f} 公斤\")\n",
