--- a/leasson_BMI/bmi.ipynb
+++ b/leasson_BMI/bmi.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "您的身高 166 公分，體重 90 公斤\n",
-      "您的BMI值是: 32.66, 您的體重中度肥胖\n",
+      "您的身高 166 公分，體重 50 公斤\n",
+      "您的BMI值是: 18.14, 您的體重體重過輕\n",
       "結束使用BMI計算程式！\n"
      ]
     }
